Fix94: * fixed flickering helpHover when displaying the popover in the right low corner

--- a/ERP-light/WebContent/css/globalStyles.css
+++ b/ERP-light/WebContent/css/globalStyles.css
@@ -85,6 +85,7 @@ body{
 	height: auto;
 	max-heigth: 100px;
 	padding: 5px;
+	margin: 0px;
 /* 	background: white; */
 /* 	border: 2px solid black; */
 /* 	border-radius: 6px; */
